# xNet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  demo_chat.py  verify_phase5.sh
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  traits.rs  types.rs
desktop/: package-lock.json  package.json  tailwind.config.js
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
network/: Cargo.toml
network/src/: behaviour.rs  lib.rs
protocol/: Cargo.toml
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
