[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xnet-core = { version = "0.1.0", path = "../../core" }
xnet-network = { version = "0.1.0", path = "../../network" }
xnet-runtime = { version = "0.1.0", path = "../../runtime" }
xnet-protocol = { version = "0.1.0", path = "../../protocol" }
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-shell = "2.3.4"
sysinfo = "0.38.0"
libp2p = { version = "0.56.0", default-features = false }
user-idle = "0.6.0"
warp = { version = "0.4.2", features = ["server"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }

